--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-
+  <link rel="stylesheet" href="style.css">
   <title>Agency</title>
 </head>
 <body>
   <!-- nav -->
    <nav class="navbar navbar-expand-md">
     <a href="" class="navbar-brand">
-        <h3>Agency</h3>
+        <h3 class="font-italic">Agency</h3>
     </a>
     <button class="navbar-toggler" type="button" data-toggle='colapse' data-target="#myNavbar">
         <span class="navbar-togler-icon"></span>
