--- a/index.html
+++ b/index.html
@@ -49,6 +49,20 @@
       </ul>
     </div>
   </nav>
+
+  <!-- banner -->
+  <section id="banner">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-10 mx-auto">
+          <h1>Sourcing Agency</h1>
+          <h2>What we do</h2>
+          <a href="" class="btn">Hire us</a>
+          <a href="" class="btn">Contact</a>
+        </div>
+      </div>
+    </div>
+  </section>
   
 
   <!-- Option 2: Separate Popper and Bootstrap JS -->
