--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+  <!-- animate JS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   <link rel="stylesheet" href="style.css">
   <title>Agency</title>
 </head>
@@ -53,12 +55,12 @@
   <!-- banner -->
   <section id="banner">
     <div class="container">
-      <div class="row">
+      <div class="row align-items-center text-center">
         <div class="col-md-10 mx-auto">
-          <h1>Sourcing Agency</h1>
-          <h2>What we do</h2>
-          <a href="" class="btn">Hire us</a>
-          <a href="" class="btn">Contact</a>
+          <h1 class="text-white display-2 font-italic animate__animated animate__pulse">Sourcing Agency</h1>
+          <h2 class="animate__animated animate__pulse animate__delay-1s">What we do</h2>
+          <a href="" class="bannerBtn">Hire us</a>
+          <a href="" class="bannerBtn">Contact</a>
         </div>
       </div>
     </div>
