--- a/index.html
+++ b/index.html
@@ -65,6 +65,36 @@
       </div>
     </div>
   </section>
+
+  <!-- bannerIcons -->
+  <section class="bannerIcons">
+      <div class="row no-gutters">
+          <div class="col-md-8 mx-auto">
+              <ul class="list-unstyled d-flex justify-content-center">
+                  <li class="text-center">
+                      <i class="fab fa-html5"></i>
+                      <p>Structure</p>
+                  </li>
+                  <li class="text-center">
+                      <i class="fab fa-css3-alt"></i>
+                      <p>Design</p>
+                  </li>
+                  <li class="text-center">
+                      <i class="fab fa-js"></i>
+                      <p>Interactivity</p>
+                  </li>
+                  <li class="text-center">
+                      <i class="fab fa-php"></i>
+                      <p>Dynamic</p>
+                  </li>
+                  <li class="text-center">
+                      <i class="fab fa-wordpress"></i>
+                      <p>Popular</p>
+                  </li>
+              </ul>
+          </div>
+      </div>
+  </section>
   
 
   <!-- Option 2: Separate Popper and Bootstrap JS -->
