--- a/index.html
+++ b/index.html
@@ -95,6 +95,40 @@
           </div>
       </div>
   </section>
+
+  <!-- services -->
+  <section id="services py-5">
+    <article class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <h2>Services we provide</h2>
+          <h4>Lorem ipsum dolor sit amet.</h4>
+        </div>
+        <div class="row">
+          <div class="col-md-3">
+            <i class="fab fa-apple"></i>
+            <h3>IOS Apps</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt ratione accusantium illum architecto eligendi esse doloribus qui dignissimos maiores natus!</p>
+          </div>
+          <div class="col-md-3">
+            <i class="fab fa-android"></i>
+            <h3>Android Apps</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt ratione accusantium illum architecto eligendi esse doloribus qui dignissimos maiores natus!</p>
+          </div>
+          <div class="col-md-3">
+            <i class="fab fa-php"></i>
+            <h3>PHP development</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt ratione accusantium illum architecto eligendi esse doloribus qui dignissimos maiores natus!</p>
+          </div>
+          <div class="col-md-3">
+            <i class="fab fa-js"></i>
+            <h3>JS development</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt ratione accusantium illum architecto eligendi esse doloribus qui dignissimos maiores natus!</p>
+          </div>
+        </div>
+      </div>
+    </article>
+  </section>
   
 
   <!-- Option 2: Separate Popper and Bootstrap JS -->
