--- a/index.html
+++ b/index.html
@@ -97,34 +97,35 @@
   </section>
 
   <!-- services -->
-  <section id="services py-5">
+  <section id="services" class="py-5">
     <article class="container">
-      <div class="row">
-        <div class="col-md-12">
+      <!-- title -->
+      <div class="row title">
+        <div class="col-md-12 mb-5">
           <h2>Services we provide</h2>
-          <h4>Lorem ipsum dolor sit amet.</h4>
+          <h4 class="text-muted">Lorem ipsum dolor sit amet.</h4>
         </div>
-        <div class="row">
-          <div class="col-md-3">
-            <i class="fab fa-apple"></i>
-            <h3>IOS Apps</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt ratione accusantium illum architecto eligendi esse doloribus qui dignissimos maiores natus!</p>
-          </div>
-          <div class="col-md-3">
-            <i class="fab fa-android"></i>
-            <h3>Android Apps</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt ratione accusantium illum architecto eligendi esse doloribus qui dignissimos maiores natus!</p>
-          </div>
-          <div class="col-md-3">
-            <i class="fab fa-php"></i>
-            <h3>PHP development</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt ratione accusantium illum architecto eligendi esse doloribus qui dignissimos maiores natus!</p>
-          </div>
-          <div class="col-md-3">
-            <i class="fab fa-js"></i>
-            <h3>JS development</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt ratione accusantium illum architecto eligendi esse doloribus qui dignissimos maiores natus!</p>
-          </div>
+      </div>
+      <div class="row text-center">
+        <div class="col-md-3">
+          <i class="fab fa-apple"></i>
+          <h3 class="my-3">IOS Apps</h3>
+          <p class="text-muted">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt ratione accusantium illum architecto eligendi esse doloribus qui dignissimos maiores natus!</p>
+        </div>
+        <div class="col-md-3">
+          <i class="fab fa-android"></i>
+          <h3 class="my-3">Android Apps</h3>
+          <p class="text-muted">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt ratione accusantium illum architecto eligendi esse doloribus qui dignissimos maiores natus!</p>
+        </div>
+        <div class="col-md-3">
+          <i class="fab fa-php"></i>
+          <h3 class="my-3">PHP development</h3>
+          <p class="text-muted">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt ratione accusantium illum architecto eligendi esse doloribus qui dignissimos maiores natus!</p>
+        </div>
+        <div class="col-md-3">
+          <i class="fab fa-js"></i>
+          <h3 class="my-3">JS development</h3>
+          <p class="text-muted">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt ratione accusantium illum architecto eligendi esse doloribus qui dignissimos maiores natus!</p>
         </div>
       </div>
     </article>
