--- a/index.html
+++ b/index.html
@@ -130,6 +130,21 @@
       </div>
     </article>
   </section>
+
+  <!-- contact -->
+  <section id="contact" class="py-5">
+    <aricle class="container">
+      <div class="row">
+        <div class="col-md-10 mx-auto">
+          <h2>Newsletter</h2>
+          <form class="form-inline">
+            <input type="email" class="form-control" placeholder="Email">
+            <button>Subscribe now</button>
+          </form>
+        </div>
+      </div>
+    </aricle>
+  </section>
   
 
   <!-- Option 2: Separate Popper and Bootstrap JS -->
