--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
 
   <!-- contact -->
   <section id="contact" class="py-5">
-    <aricle class="container">
-      <div class="row">
+    <article class="container">
+      <div class="row align-items-center">
         <div class="col-md-10 mx-auto">
           <h2>Newsletter</h2>
           <form class="form-inline">
@@ -143,7 +143,7 @@
           </form>
         </div>
       </div>
-    </aricle>
+    </article>
   </section>
   
 
