--- a/index.html
+++ b/index.html
@@ -258,6 +258,101 @@
       </div>
     </div>
   </section>
+
+  <!-- projects -->
+  <section id="projects" class="py-5">
+    <div class="container-fluid">
+      <!-- title -->
+      <div class="row title">
+        <div class="col-md-12 mb-5">
+          <h2 class="container">Projects</h2>
+          <h4 class="container text-muted">Lorem ipsum dolor sit amet.</h4>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-3">
+          <div class="imgContainer">
+            <img class="img-fluid" src="img/project1.jpg" alt="">
+            <div class="imgIcons">
+              <a href=""><i class="fab fa-facebook-square"></i></a>
+              <a href=""><i class="fab fa-instagram"></i></a>
+              <a href=""><i class="fab fa-twitter"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="imgContainer">
+            <img class="img-fluid" src="img/project2.jpg" alt="">
+            <div class="imgIcons">
+              <a href=""><i class="fab fa-facebook-square"></i></a>
+              <a href=""><i class="fab fa-instagram"></i></a>
+              <a href=""><i class="fab fa-twitter"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="imgContainer">
+            <img class="img-fluid" src="img/project3.jpg" alt="">
+            <div class="imgIcons">
+              <a href=""><i class="fab fa-facebook-square"></i></a>
+              <a href=""><i class="fab fa-instagram"></i></a>
+              <a href=""><i class="fab fa-twitter"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="imgContainer">
+            <img class="img-fluid" src="img/project4.jpg" alt="">
+            <div class="imgIcons">
+              <a href=""><i class="fab fa-facebook-square"></i></a>
+              <a href=""><i class="fab fa-instagram"></i></a>
+              <a href=""><i class="fab fa-twitter"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="imgContainer">
+            <img class="img-fluid" src="img/project5.jpg" alt="">
+            <div class="imgIcons">
+              <a href=""><i class="fab fa-facebook-square"></i></a>
+              <a href=""><i class="fab fa-instagram"></i></a>
+              <a href=""><i class="fab fa-twitter"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="imgContainer">
+            <img class="img-fluid" src="img/project6.jpg" alt="">
+            <div class="imgIcons">
+              <a href=""><i class="fab fa-facebook-square"></i></a>
+              <a href=""><i class="fab fa-instagram"></i></a>
+              <a href=""><i class="fab fa-twitter"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="imgContainer">
+            <img class="img-fluid" src="img/project7.jpg" alt="">
+            <div class="imgIcons">
+              <a href=""><i class="fab fa-facebook-square"></i></a>
+              <a href=""><i class="fab fa-instagram"></i></a>
+              <a href=""><i class="fab fa-twitter"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="imgContainer">
+            <img class="img-fluid" src="img/project8.jpg" alt="">
+            <div class="imgIcons">
+              <a href=""><i class="fab fa-facebook-square"></i></a>
+              <a href=""><i class="fab fa-instagram"></i></a>
+              <a href=""><i class="fab fa-twitter"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   
 
   <!-- Option 2: Separate Popper and Bootstrap JS -->
