people html and css

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
   </section>
 
   <!-- projects -->
-  <section id="projects" class="py-5">
+  <section id="projects">
     <div class="container-fluid">
       <!-- title -->
       <div class="row title">
@@ -347,6 +347,89 @@
               <a href=""><i class="fab fa-facebook-square"></i></a>
               <a href=""><i class="fab fa-instagram"></i></a>
               <a href=""><i class="fab fa-twitter"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- people -->
+  <section id="people" class="py-5">
+    <div class="container">
+      <!-- title -->
+      <div class="row title">
+        <div class="col-md-12 mb-5">
+          <h2 class="container">Our team</h2>
+          <h4 class="container text-muted">Lorem ipsum dolor sit amet</h4>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-3">
+          <div class="card text-center">
+            <img src="img/people1.jpg" alt="" class="img-fluid">
+            <div class="card-body">
+              <h2>Ron</h2>
+              <h5>Lead developer</h5>
+              <hr>
+              <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus maiores, accusamus similique blanditiis numquam officiis!</p>
+            </div>
+            <div class="card-footer">
+              <a href=""><i class="fab fa-facebook-square"></i></a>
+                <a href=""><i class="fab fa-instagram"></i></a>
+                <a href=""><i class="fab fa-linkedin"></i></a>
+                <a href=""><i class="fab fa-github"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card text-center">
+            <img src="img/people2.jpg" alt="" class="img-fluid">
+            <div class="card-body">
+              <h2>Alicia</h2>
+              <h5>Photographer</h5>
+              <hr>
+              <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus maiores, accusamus similique blanditiis numquam officiis!</p>
+            </div>
+            <div class="card-footer">
+              <a href=""><i class="fab fa-facebook-square"></i></a>
+                <a href=""><i class="fab fa-instagram"></i></a>
+                <a href=""><i class="fab fa-linkedin"></i></a>
+                <a href=""><i class="fas fa-basketball-ball"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card text-center">
+            <img src="img/people3.jpg" alt="" class="img-fluid">
+            <div class="card-body">
+              <h2>Meggy</h2>
+              <h5>Designer</h5>
+              <hr>
+              <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus maiores, accusamus similique blanditiis numquam officiis!</p>
+            </div>
+            <div class="card-footer">
+              <a href=""><i class="fab fa-facebook-square"></i></a>
+                <a href=""><i class="fab fa-instagram"></i></a>
+                <a href=""><i class="fab fa-linkedin"></i></a>
+                <a href=""><i class="fab fa-behance"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card text-center">
+            <img src="img/people4.jpg" alt="" class="img-fluid">
+            <div class="card-body">
+              <h2>Samantha</h2>
+              <h5>Copywriter</h5>
+              <hr>
+              <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus maiores, accusamus similique blanditiis numquam officiis!</p>
+            </div>
+            <div class="card-footer">
+              <a href=""><i class="fab fa-facebook-square"></i></a>
+                <a href=""><i class="fab fa-instagram"></i></a>
+                <a href=""><i class="fab fa-linkedin"></i></a>
+                <a href=""><i class="fab fa-wordpress"></i></a>
             </div>
           </div>
         </div>
