pricing html and css

--- a/index.html
+++ b/index.html
@@ -436,6 +436,94 @@
       </div>
     </div>
   </section>
+
+  <!-- pricing -->
+  <section id="pricing" class="py-5">
+    <div class="container">
+      <!-- title -->
+      <div class="row title">
+        <div class="col-md-12 mb-5">
+          <h2 class="container">Pricing</h2>
+          <h4 class="container text-muted">Lorem ipsum dolor sit amet</h4>
+        </div>
+      </div>
+      <!-- row 2. -->
+      <div class="row">
+        <div class="col-md-3">
+          <div class="card text-center">
+            <div class="card-title">
+              <h4>Basic</h4>
+              <h6>Monthly plan</h6>
+            </div>
+            <div class="card-text priceNum">
+              <sup class="money">$</sup><span class="moneyNum">9</span><span class="moneyEnd">.99</span>
+            </div>
+            <ul class="list-group text-muted">
+              <li class="list-group-item">150gb Monthly bandwith</li>
+              <li class="list-group-item">$15 monthly backup</li>
+              <li class="list-group-item">24 / 7 support</li>
+              <li class="list-group-item">Free SSL</li>
+            </ul>
+            <a href="" class="btn">Buy</a>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card text-center">
+            <div class="card-title">
+              <h4>Standard</h4>
+              <h6>Monthly plan</h6>
+            </div>
+            <div class="card-text priceNum">
+              <sup class="money">$</sup><span class="moneyNum">19</span><span class="moneyEnd">.99</span>
+            </div>
+            <ul class="list-group text-muted">
+              <li class="list-group-item">150gb Monthly bandwith</li>
+              <li class="list-group-item">$15 monthly backup</li>
+              <li class="list-group-item">24 / 7 support</li>
+              <li class="list-group-item">Free SSL</li>
+            </ul>
+            <a href="" class="btn">Buy</a>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card text-center">
+            <div class="card-title">
+              <h4>Premium</h4>
+              <h6>Monthly plan</h6>
+            </div>
+            <div class="card-text priceNum">
+              <sup class="money">$</sup><span class="moneyNum">69</span><span class="moneyEnd">.99</span>
+            </div>
+            <ul class="list-group text-muted">
+              <li class="list-group-item">150gb Monthly bandwith</li>
+              <li class="list-group-item">$15 monthly backup</li>
+              <li class="list-group-item">24 / 7 support</li>
+              <li class="list-group-item">Free SSL</li>
+            </ul>
+            <a href="" class="btn">Buy</a>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card text-center">
+            <div class="card-title">
+              <h4>Pro</h4>
+              <h6>Monthly plan</h6>
+            </div>
+            <div class="card-text priceNum">
+              <sup class="money">$</sup><span class="moneyNum">99</span><span class="moneyEnd">.99</span>
+            </div>
+            <ul class="list-group text-muted">
+              <li class="list-group-item">150gb Monthly bandwith</li>
+              <li class="list-group-item">$15 monthly backup</li>
+              <li class="list-group-item">24 / 7 support</li>
+              <li class="list-group-item">Free SSL</li>
+            </ul>
+            <a href="" class="btn">Buy</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   
 
   <!-- Option 2: Separate Popper and Bootstrap JS -->
