footer html and css

--- a/index.html
+++ b/index.html
@@ -524,6 +524,23 @@
       </div>
     </div>
   </section>
+
+  <!-- footer -->
+  <footer id="footer" class="py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <p><i class="fas fa-phone"></i>&nbsp; 062 218 454</p>
+          <p><i class="fas fa-envelope"></i>&nbsp; info@agency.com</p>
+          <p><i class="fas fa-map-marker-alt"></i>&nbsp; Zmaj Jovina 15, Novi Sad</p>
+        </div>
+        <div class="col-md-8">
+          <h2>About</h2>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum harum repellendus eos optio in autem.</p>
+        </div>
+      </div>
+    </div>
+  </footer>
   
 
   <!-- Option 2: Separate Popper and Bootstrap JS -->
