--- a/index.html
+++ b/index.html
@@ -437,6 +437,52 @@
     </div>
   </section>
 
+  <!-- skills -->
+  <section id="skills">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-10 mx-auto">
+          <div class="single-progress text-white mb-3">
+            <div class="d-flex justify-content-between">
+              <h4>HTML</h4>
+              <h4>99%</h4>
+            </div>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 99%" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+          <div class="single-progress text-white mb-3">
+            <div class="d-flex justify-content-between">
+              <h4>CSS</h4>
+              <h4>95%</h4>
+            </div>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 95%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+          <div class="single-progress text-white mb-3">
+            <div class="d-flex justify-content-between">
+              <h4>PHP</h4>
+              <h4>79%</h4>
+            </div>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 79%" aria-valuenow="79" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+          <div class="single-progress text-white mb-3">
+            <div class="d-flex justify-content-between">
+              <h4>JS</h4>
+              <h4>85%</h4>
+            </div>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- pricing -->
   <section id="pricing" class="py-5">
     <div class="container">
